log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: excercises
spec:
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: log-output-volume
        emptyDir: {}
      - name: config-volume
        configMap:
          name: log-output-config
          items:
            - key: information.txt
              path: information.txt
      containers:
      - name: string-generator
        image: log-output-generator
        imagePullPolicy: Never
        volumeMounts:
          - mountPath: /data
            name: log-output-volume

      - name: string-server
        image: log-output-server
        imagePullPolicy: Never
        volumeMounts:
          - mountPath: /data
            name: log-output-volume
          - mountPath: /config
            name: config-volume
