log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: excercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
